maybe fix resizing issue on mobile

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -99,7 +99,8 @@ a:hover {
 }
 
 #intro {
-  background: url('../img/intro-bg.jpg') no-repeat center center; 
+  height: 100%;
+  background: url('../img/intro-bg.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
